--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-dom": "19.1.0",
     "react-window": "^2.2.1",
     "recharts": "^3.2.1",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
